force-app/main/default/objects/Avatar_Master__c/Avatar_Master__c.object-meta.xml
<CustomObject>
    <label>Avatar Master</label>
    <nameField>
        <displayFormat>AM-{0000000000}</displayFormat>
        <label>Avatar Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avatar Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>