force-app/main/default/objects/Avatar_Master__c/fields/Avatar_Description__c.field-meta.xml
<CustomField>
    <fullName>Avatar_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Avatar Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>