force-app/main/default/objects/Avatar_Master__c/fields/Avatar_Segment__c.field-meta.xml
<CustomField>
    <fullName>Avatar_Segment__c</fullName>
    <label>Avatar Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>