force-app/main/default/objects/Avatar_Master__c/fields/Avatar_TH__c.field-meta.xml
<CustomField>
    <fullName>Avatar_TH__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Avatar TH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>