force-app/main/default/objects/Avatar_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Segment__c</columns>
    <columns>Avatar_EN__c</columns>
    <columns>Avatar_TH__c</columns>
    <columns>Avatar_Short_Description__c</columns>
    <columns>Avatar_Description__c</columns>
    <columns>Avatar_Segment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>